fix days of week alignment and corner gap

--- a/easy-ui-react/src/Calendar/CalendarGrid.module.scss
+++ b/easy-ui-react/src/Calendar/CalendarGrid.module.scss
@@ -4,4 +4,7 @@
 }
 .CalendarGridHeader {
   background-color: design-token("color.primary.700");
+  span {
+    vertical-align: middle;
+  }
 }
