--- a/easy-ui-react/src/Calendar/CalendarHeader.module.scss
+++ b/easy-ui-react/src/Calendar/CalendarHeader.module.scss
@@ -3,10 +3,11 @@
 .CalendarHeader {
   @include component-token("calendar-header", "padding", 6px);
   @include component-token("calendar-header", "line-height", 19.5px);
+  @include component-token("calendar-header", "border-radius", 7px);
   width: 100%;
   background-color: design-token("color.primary.800");
-  border-top-left-radius: design-token("shape.border_radius.lg");
-  border-top-right-radius: design-token("shape.border_radius.lg");
+  border-top-left-radius: component-token("calendar-header", "border-radius");
+  border-top-right-radius: component-token("calendar-header", "border-radius");
   padding: component-token("calendar-header", "padding");
   span {
     line-height: component-token("calendar-header", "line-height");
